--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -15,12 +15,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Inconsolata:wght@200..900&family=Lato:wght@100;300;400;700;900&family=Oswald:wght@200..700&family=Play:wght@400;700&family=Raleway:wght@100..900&family=Roboto:wght@100;300;400;500;700;900&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
-    <script src="scripts/chamber.js"></script>
+    <link rel="stylesheet" href="styles/discovery-modal.css"> <!-- Link to the Discovery modal styles -->
+    <script src="scripts/chamber.js" defer></script>
 </head>
 <body>
     <header>
         <h1><img src="images/logo.png" alt="Manila Chamber of Commerce Logo"> Manila Chamber of Commerce</h1>
-        <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="menu-icon" aria-label="Toggle navigation menu">&#9776;</label>
         <nav class="nav-menu">
             <ul>
