--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -15,12 +15,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Inconsolata:wght@200..900&family=Lato:wght@100;300;400;700;900&family=Oswald:wght@200..700&family=Play:wght@400;700&family=Raleway:wght@100..900&family=Roboto:wght@100;300;400;500;700;900&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="preload" href="styles/reset.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="styles/reset.css"></noscript>
     <script src="scripts/chamber.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.2/lazysizes.min.js" async></script> <!-- Lazy loading script -->
 </head>
 <body>
     <header>
-        <h1><img src="images/logo.png" alt="Manila Chamber of Commerce Logo"> Manila Chamber of Commerce</h1>
+        <h1><img src="images/logo.png" alt="Manila Chamber of Commerce Logo" width="100" height="100"> Manila Chamber of Commerce</h1>
         <label class="menu-icon" aria-label="Toggle navigation menu">&#9776;</label>
         <nav class="nav-menu">
             <ul>
@@ -49,9 +51,9 @@
                 <p>(+63) 555-2300</p>
             </div>
             <div class="footer-icons">
-                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/youtube.png" alt="Follow us on YouTube"></a>
-                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/twitter.png" alt="Follow us on Twitter"></a>
-                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/linkedin.png" alt="Connect with us on LinkedIn"></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/youtube.png" alt="Follow us on YouTube" width="32" height="32"></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/twitter.png" alt="Follow us on Twitter" width="32" height="32"></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/linkedin.png" alt="Connect with us on LinkedIn" width="32" height="32"></a>
             </div>
             <div class="footer-credit">
                 <p>WDD231 Class Project</p>
