--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Chamber of Commerce - Home">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://127.0.0.1:5500/chamber/images/logo.png">
+    <meta property="og:image" content="https://thayl0w.github.io/wdd231/chamber/images/hero.jpg">
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/join.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
