--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -12,6 +12,7 @@
     <meta property="og:image" content="https://thayl0w.github.io/wdd231/chamber/images/hero.jpg">
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/discover.html">
     <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/mobile.css">
     <script src="scripts/chamber.js" defer></script>
 </head>
 <body>
