--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -11,13 +11,16 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://thayl0w.github.io/wdd231/chamber/images/hero.jpg">
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/discover.html">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" as="style">
+    <link rel="preload" href="https://thayl0w.github.io/styles/mobile.css" as="style">
+    <link rel="preload" href="https://thayl0w.github.io/styles/reset.css" as="style">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/mobile.css">
     <script src="scripts/chamber.js" defer></script>
 </head>
 <body>
     <header>
-        <h1><img src="images/logo.png" alt="Manila Chamber of Commerce Logo"> Manila Chamber of Commerce</h1>
+        <h1><img src="images/logo.png" alt="Manila Chamber of Commerce Logo" > Manila Chamber of Commerce</h1>
         <label class="menu-icon" aria-label="Toggle navigation menu">&#9776;</label>
         <nav class="nav-menu">
             <ul>
