--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -11,16 +11,16 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://thayl0w.github.io/wdd231/chamber/images/hero.jpg">
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/discover.html">
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" as="style">
-    <link rel="preload" href="https://thayl0w.github.io/styles/mobile.css" as="style">
-    <link rel="preload" href="https://thayl0w.github.io/styles/reset.css" as="style">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Inconsolata:wght@200..900&family=Lato:wght@100;300;400;700;900&family=Oswald:wght@200..700&family=Play:wght@400;700&family=Raleway:wght@100..900&family=Roboto:wght@100;300;400;500;700;900&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/mobile.css">
+    <link rel="stylesheet" href="styles/discovery-modal.css">
     <script src="scripts/chamber.js" defer></script>
 </head>
 <body>
     <header>
-        <h1><img src="images/logo.png" alt="Manila Chamber of Commerce Logo" > Manila Chamber of Commerce</h1>
+        <h1><img src="images/logo.png" alt="Manila Chamber of Commerce Logo"> Manila Chamber of Commerce</h1>
         <label class="menu-icon" aria-label="Toggle navigation menu">&#9776;</label>
         <nav class="nav-menu">
             <ul>
@@ -31,9 +31,11 @@
             </ul>
         </nav>
     </header>
+    
     <main>
         <h2>Discover Manila</h2>
         <p>Explore the rich history, culture, and attractions of Manila. Below are some must-visit places:</p>
+
         <section id="places-container">
             <h2>Places to Visit</h2> <!-- Added heading -->
             <!-- Places will be dynamically inserted here -->
