--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,6 +33,7 @@
     </header>
     
     <main>
+        <h1>Manila Chamber</h1>
         <h2>Discover Manila</h2>
         <p>Explore the rich history, culture, and attractions of Manila. Below are some must-visit places:</p>
 
