--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -38,8 +38,8 @@
         <p>Explore the rich history, culture, and attractions of Manila. Below are some must-visit places:</p>
 
         <section id="places-container">
-            <h2>Places to Visit</h2> <!-- Added heading -->
-            <!-- Places will be dynamically inserted here -->
+            <h2>Places to Visit</h2> 
+            
         </section>
     </main>
     <footer>
