--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,7 +33,7 @@
     </header>
     
     <main>
-        <h1>Discover Manila</h1>
+        <h2>Discover Manila - Chamber of Commerce</h2>
         <p>Explore the rich history, culture, and attractions of Manila. Below are some must-visit places:</p>
 
         <section id="places-container">
