--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <h1><img src="images/logo.png" alt="Manila Chamber of Commerce Logo">Discover- Manila Chamber of Commerce</h1>
+        <h1><img src="images/logo.png" alt="Manila Chamber of Commerce Logo"> Manila Chamber of Commerce</h1>
         <label class="menu-icon" aria-label="Toggle navigation menu">&#9776;</label>
         <nav class="nav-menu">
             <ul>
@@ -33,7 +33,8 @@
     </header>
     
     <main>
-        <h1>Discover Manila</h1>
+        <h1>Manila Chamber Of Commerce</h1>
+        <h3>Discover Manila</h3>
         <p>Explore the rich history, culture, and attractions of Manila. Below are some must-visit places:</p>
 
         <section id="places-container">
