--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Inconsolata:wght@200..900&family=Lato:wght@100;300;400;700;900&family=Oswald:wght@200..700&family=Play:wght@400;700&family=Raleway:wght@100..900&family=Roboto:wght@100;300;400;500;700;900&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/reset.css">
+    <!-- <link rel="stylesheet" href="styles/reset.css"> -->
     <link rel="stylesheet" href="styles/discovery-modal.css">
     <script src="scripts/chamber.js" defer></script>
 </head>
