--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/discover.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="styles/reset.css">
+    <!-- <link rel="stylesheet" href="styles/reset.css"> -->
     <link rel="stylesheet" href="styles/discovery-modal.css">
     <script src="scripts/discover.js"></script>
     <script src="scripts/chamber.js" defer></script>
