--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -32,7 +32,7 @@
                 <li><a href="join.html">Join</a></li>
                 <li><a href="discover.html">Discover</a></li>
             </ul>
-        </nav> <!-- ✅ Closing tag added here -->
+        </nav>
     </header>
     
     
