--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,10 +32,10 @@
         <img src="images/hero.jpg" alt="City View">
     </section>
 
-    <main>
+    <!-- <main>
         <div id="directory-container"></div>
         <button id="toggleView">Toggle View</button>
-    </main>
+    </main> -->
 
     <footer>
         <div class="footer-container">
