--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,7 +39,7 @@
         <button class="hero-btn">Join Us</button>
     </section>
 
-    <main>     
+    <!-- <main>     
         <div class="container">
             <section class="weather">
                 <div id="currentWeather"></div>
@@ -63,7 +63,7 @@
             </section>
             
         </div>
-    </main>
+    </main> -->
 
     <footer>
         <div class="footer-container">
