--- a/chamber/join.html
+++ b/chamber/join.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
     </header>
-
+<!-- 
     <main class="join-hero">
         <h2>Join the Manila Chamber of Commerce</h2> 
         <p>Fill out the form below to become a member.</p>
@@ -77,7 +77,7 @@
         </form>
     </div>
 
-    <!-- Membership Cards Section -->
+   
     <section class="membership-cards">
         <div class="card" data-member-id="1">
             <h2>Basic Membership</h2>
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-    <!-- Modals -->
+  
     <div id="modal-1" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -118,7 +118,7 @@
             <p>Details about the Gold Membership...</p>
         </div>
     </div>
-    </section>
+    </section>  <-->
     
     <footer>
         <div class="footer-container">
