--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/discovery-modal.css">
+    <link rel="stylesheet" href="styles/mobile.css">
     <script src="scripts/chamber.js" defer></script>
 </head>
 <body>
