--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -14,9 +14,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/discovery-modal.css">
-    <link rel="stylesheet" href="styles/mobile.css">
-    <script src="scripts/chamber.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"></noscript>
+    <link rel="stylesheet" href="styles/discovery-modal.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="styles/discovery-modal.css"></noscript>
+        <script src="scripts/chamber.js" defer></script>
 </head>
 <body>
     <header>
