--- a/final_project/index.html
+++ b/final_project/index.html
@@ -28,8 +28,7 @@
         <section class="hero">
             <div class="hero-text">
                 <h1>Experience<span class="dot">.</span></h1>
-                <p>Welcome to Discover Places!
-                     Uncover the hidden gems and must-visit spots in the Philippines. From exciting attractions to culinary delights, we've got it all.</p>
+                <p>Welcome to Discover Places! Uncover the hidden gems and must-visit spots in the Philippines. From exciting attractions to culinary delights, we've got it all.</p>
                 <a href="#" class="cta-button">See how it works</a>
             </div>
             <div class="hero-image">
