--- a/final_project/index.html
+++ b/final_project/index.html
@@ -41,23 +41,23 @@
             <h2>A Guide to Philippines Cultural Treasures</h2>
             <div class="gallery">
                 <div class="thumbnail" onclick="showDetails('Bohol', 'images/bohol.jpg', 'Bohol is famous for its Chocolate Hills, tarsiers, and pristine beaches.')">
-                    <img src="images/bohol.jpg" alt="Bohol - Chocolate Hills">
+                    <img src="images/bohol.webp" alt="Bohol - Chocolate Hills">
                     <button class="learn-more">Learn More</button>
                 </div>
-                <div class="thumbnail" onclick="showDetails('Palawan', 'images/palawan.jpg', 'Palawan offers stunning beaches like El Nido and the Underground River.')">
-                    <img src="images/palawan.jpg" alt="Palawan - Beautiful Beaches">
+                <div class="thumbnail" onclick="showDetails('Palawan', 'images/palawan.webp', 'Palawan offers stunning beaches like El Nido and the Underground River.')">
+                    <img src="images/palawan.webp" alt="Palawan - Beautiful Beaches">
                     <button class="learn-more">Learn More</button>
                 </div>
-                <div class="thumbnail" onclick="showDetails('Vigan', 'images/vigan.jpg', 'Vigan is a UNESCO Heritage site known for its Spanish-era streets and local cuisine.')">
-                    <img src="images/vigan.jpg" alt="Vigan - Spanish Colonial Town">
+                <div class="thumbnail" onclick="showDetails('Vigan', 'images/vigan.webp', 'Vigan is a UNESCO Heritage site known for its Spanish-era streets and local cuisine.')">
+                    <img src="images/vigan.webp" alt="Vigan - Spanish Colonial Town">
                     <button class="learn-more">Learn More</button>
                 </div>
-                <div class="thumbnail" onclick="showDetails('Taal', 'images/taal.jpg', 'Taal Volcano is a unique volcano within a lake, offering scenic views and historical sites.')">
-                    <img src="images/taal.jpg" alt="Taal Volcano">
+                <div class="thumbnail" onclick="showDetails('Taal', 'images/taal.webp', 'Taal Volcano is a unique volcano within a lake, offering scenic views and historical sites.')">
+                    <img src="images/taal.webp" alt="Taal Volcano">
                     <button class="learn-more">Learn More</button>
                 </div>
-                <div class="thumbnail" onclick="showDetails('Batanes', 'images/batanes.jpg', 'Batanes is known for its breathtaking landscapes, rolling hills, and Ivatan culture.')">
-                    <img src="images/batanes.jpg" alt="Batanes - Rolling Hills">
+                <div class="thumbnail" onclick="showDetails('Batanes', 'images/batanes.webp', 'Batanes is known for its breathtaking landscapes, rolling hills, and Ivatan culture.')">
+                    <img src="images/batanes.webp" alt="Batanes - Rolling Hills">
                     <button class="learn-more">Learn More</button>
                 </div>
             </div>
@@ -91,10 +91,10 @@
 
     <footer>
         <div class="social-icons">
-            <a href="#"><img src="instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="youtube.png" alt="YouTube"></a>
-            <a href="#"><img src="x.png" alt="X (Twitter)"></a>
+            <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
+            <a href="#"><img src="images/x.png" alt="X (Twitter)"></a>
         </div>
         <div></div>
     </footer>
