--- a/final_project/index.html
+++ b/final_project/index.html
@@ -33,7 +33,7 @@
                 <a href="#" class="cta-button">See how it works</a>
             </div>
             <div class="hero-image">
-                <img src="images/mayon.jpg" alt="Hero Image">
+                <img src="images/mayon.jpg" alt="Hero Image" loading="lazy">
             </div>
         </section>
 
@@ -41,23 +41,23 @@
             <h2>A Guide to Philippines Cultural Treasures</h2>
             <div class="gallery">
                 <div class="thumbnail" onclick="showDetails('Bohol', 'images/bohol.webp', 'Bohol is famous for its Chocolate Hills, tarsiers, and pristine beaches.')">
-                    <img src="images/bohol.webp" alt="Bohol - Chocolate Hills">
+                    <img src="images/bohol.webp" alt="Bohol - Chocolate Hills" loading="lazy">
                     <button class="learn-more">Learn More</button>
                 </div>
                 <div class="thumbnail" onclick="showDetails('Palawan', 'images/palawan.webp', 'Palawan offers stunning beaches like El Nido and the Underground River.')">
-                    <img src="images/palawan.webp" alt="Palawan - Beautiful Beaches">
+                    <img src="images/palawan.webp" alt="Palawan - Beautiful Beaches" loading="lazy">
                     <button class="learn-more">Learn More</button>
                 </div>
                 <div class="thumbnail" onclick="showDetails('Vigan', 'images/vigan.webp', 'Vigan is a UNESCO Heritage site known for its Spanish-era streets and local cuisine.')">
-                    <img src="images/vigan.webp" alt="Vigan - Spanish Colonial Town">
+                    <img src="images/vigan.webp" alt="Vigan - Spanish Colonial Town" loading="lazy">
                     <button class="learn-more">Learn More</button>
                 </div>
                 <div class="thumbnail" onclick="showDetails('Taal', 'images/taal.webp', 'Taal Volcano is a unique volcano within a lake, offering scenic views and historical sites.')">
-                    <img src="images/taal.webp" alt="Taal Volcano">
+                    <img src="images/taal.webp" alt="Taal Volcano" loading="lazy">
                     <button class="learn-more">Learn More</button>
                 </div>
                 <div class="thumbnail" onclick="showDetails('Batanes', 'images/batanes.webp', 'Batanes is known for its breathtaking landscapes, rolling hills, and Ivatan culture.')">
-                    <img src="images/batanes.webp" alt="Batanes - Rolling Hills">
+                    <img src="images/batanes.webp" alt="Batanes - Rolling Hills" loading="lazy">
                     <button class="learn-more">Learn More</button>
                 </div>
             </div>
