--- a/final_project/index.html
+++ b/final_project/index.html
@@ -57,8 +57,17 @@
             <div class="hero-text">
                 <h1>Experience<span class="dot">.</span></h1>
                 <p>Welcome to Discover Places! Uncover the hidden gems and must-visit spots in the Philippines. From exciting attractions to culinary delights, we've got it all.</p>
-                <a href="#" class="cta-button">See how it works</a>
-            </div>
+                  <a href="#" class="cta-button" onclick="toggleInfoBox(event)">See how it works</a>
+                <div id="info-box" class="info-box">
+                    <p>Discover Places helps you explore the best destinations in the Philippines.</p>
+                    <p>Here's how it works:</p>
+                    <p><span>1️⃣</span> Browse Locations – Scroll through our curated list of must-visit spots.</p>
+                    <p><span>2️⃣</span> Learn More – Click on any location to see details, images, and tips.</p>
+                    <p><span>3️⃣ </span> Save Favorites – Mark your favorite places to create a travel list.</p>
+                    <p><span>4️⃣ </span> Plan Your Trip – Use our guides & recommendations.</p>
+                    <p>✨ Start exploring now and uncover the beauty of the Philippines! ✨</p>
+                </div>
+                            </div>
             <div class="hero-image">
                 <img src="images/mayon.jpg" alt="Hero Image" loading="lazy">
             </div>
@@ -106,10 +115,11 @@
             </div>
             <div class="highlight-text">
                 <h2>Accelerate your travel experiences across the Philippines.</h2>
-                <p>Discover our innovative solutions, designed to revolutionize your travel experience and elevate your adventures across the Philippines.</p>
-                <a href="#" class="arrow-link">→</a>
+                <p> Discover our innovative solutions, thoughtfully crafted to revolutionize your travel experience and elevate your adventures across the diverse and beautiful landscapes of the Philippines. From exploring vibrant cities to uncovering hidden gems, our offerings ensure that each journey is memorable and uniquely tailored to your preferences. Experience the ultimate in travel convenience and excitement with our unparalleled services.</p>
+                <a href="https://www.tripadvisor.com/" class="arrow-link">→</a>
             </div>
         </section>
+        
     </main>
 
     <footer>
