--- a/final_project/index.html
+++ b/final_project/index.html
@@ -14,9 +14,9 @@
         <div class="logo">The Place<span class="dot">.</span></div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="auth">
