--- a/final_project/about.html
+++ b/final_project/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Mar Thayne Lowell Nacionales">
     <meta name="description" content="Learn more about The Place, our mission, and why travelers love us.">
     <link rel="stylesheet" href="styles/home.css">
-    <link rel="stylesheet" href="styles/about.css"> <!-- New About Page Styles -->
+    <link rel="stylesheet" href="styles/responsive.css">
     <script src="scripts/home.js"></script>
 </head>
 <body>
