--- a/final_project/index.html
+++ b/final_project/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Mar Thayne Lowell Nacionales">
     <meta name="description" content="Uncover the hidden gems and must-visit spots in the Philippines.">
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/responsive.css">
     <script src="scripts/home.js"></script>
 </head>
 <body>
