--- a/final_project/contact.html
+++ b/final_project/contact.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Mar Thayne Lowell Nacionales">
     <meta name="description" content="Get in touch with us for inquiries, partnerships, or support.">
     <link rel="stylesheet" href="styles/home.css"> 
+    <link rel="stylesheet" href="styles/responsive.css">
     <script src="scripts/home.js"></script>
     <script type="module" src="scripts/contact.js"></script>
 <script type="module" src="scripts/modal.js"></script>
