--- a/final_project/contact.html
+++ b/final_project/contact.html
@@ -21,6 +21,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="travel.html">More</a></li>
             </ul>
         </nav>
         <h1 class="contact-title">Contact Us</h1>
@@ -59,16 +60,20 @@
         </div>
     </section>
 
-    <footer class="contact-footer">
-        <div class="social-icons">
-            <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
-            <a href="#"><img src="images/x.png" alt="X (Twitter)"></a>
-        </div>
-        <div class="footer-info">
-            <p>&copy; 2025 The Place. All rights reserved.</p>
+    <footer>
+        <div class="footer-content">
+            <div class="social-icons">
+                <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="images/x.png" alt="X (Twitter)"></a>
+            </div>
+            <div class="footer-info">
+                <p>ExploreMore is your gateway to unforgettable journeys and unique travel experiences around the world.</p>
+                <p>© 1996–2025 ExploreMore™. All rights reserved.</p>
+            </div>
         </div>
     </footer>
+    
 </body>
 </html>
