--- a/final_project/index.html
+++ b/final_project/index.html
@@ -18,6 +18,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="travel.html">More</a></li>
             </ul>
         </nav>
         <div class="auth">
