--- a/final_project/contact.html
+++ b/final_project/contact.html
@@ -21,7 +21,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="travel.html">More</a></li>
+                <li><a href="travel.html">Explore More</a></li>
+
             </ul>
         </nav>
         <h1 class="contact-title">Contact Us</h1>
