--- a/final_project/travel.html
+++ b/final_project/travel.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A curated list of the best travel websites to explore.">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/responsive.css">
-    <script defer src="scripts/travel.js"></script> <!-- JavaScript to fetch data -->
+    <script defer src="scripts/travel.js"></script>
 </head>
 <body>
     <header>
@@ -18,7 +18,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="travel.html">More</a></li>
+                <li><a href="travel.html">Explore More</a></li>
+
             </ul>
         </nav>
     </header>
